--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -15,17 +15,7 @@
 
           .title.float-left
             %h3
-              - case job.state
-              - when :queued
-                %i.fa.fa-bed.warning
-              - when :running
-                %i.fa.fa-cog.fa-spin.primary
-              - when :completed
-                %i.fa.fa-check-circle-o.success
-              - when :aborted
-                %i.fa.fa-times-circle-o.warning
-              - else :failed
-                %i.fa.fa-times-circle-o.danger
+              %i.fa{class: job_state_icon(job.state)}
 
               = "#{job.priority} - #{job.klass}##{job.perform_method}"
 
