Show job id and parameters.

--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -27,12 +27,19 @@
 
 .clearfix
 
-.description
-  %b Created At:
+.id
+  %label ID:
+  = @job.id
+.created_at
+  %label Created At:
   = @job.created_at
 
 - @job.status.each_pair do |key, value|
   .status-message
-    %b= key.to_s.titleize
+    %label= "#{key.to_s.titleize}:"
     = value
 .clearfix
+
+.parameters
+  %label Parameters:
+  %div= @job.arguments
