Show job arguments in a more readable format.

--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -47,4 +47,5 @@
 
     .parameters
       %label Parameters:
-      %div= @job.arguments
+      %pre
+        %code= pretty_print_arguments(@job.arguments)
