--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -37,7 +37,7 @@
       = @job.id
     .created_at
       %label Created At:
-      = @job.created_at
+      = @job.created_at.in_time_zone('EST')
 
     - @job.status.each_pair do |key, value|
       .status-message
