--- a/app/views/layouts/rocket_job_mission_control/application.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/application.html.haml
@@ -15,6 +15,8 @@
     = csrf_meta_tag
 
     = stylesheet_link_tag "application", 'data-turbolinks-track' => 'data-turbolinks-track'
+    = stylesheet_link_tag    "rocket_job_mission_control/application", :media => "all"
+    = javascript_include_tag "rocket_job_mission_control/application"
     %link{href: "//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css", rel: "stylesheet"}/
     = yield :stylesheets
 
