--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -1,6 +1,7 @@
-html, body { height: 100%; }
-
-#wrapper { height: 100% }
+#wrapper {
+  height: 100%;
+  overflow: hidden;
+}
 
 body.rocket_job {
   padding: 0;
@@ -11,12 +12,15 @@ body.rocket_job {
     height: 100%;
     border-right: 1px solid #ddd;
     padding: 0;
+    overflow: scroll;
   }
 
   .job-status {
     padding: 0 3em;
     height: 100%;
     background-color: #fff;
+    overflow: scroll;
+    padding-bottom: 100px;
 
     h3 { float: left; }
 
