--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -1,6 +1,6 @@
-.col-md-6.job-status
+.col-md-8.job-status
   #job
-    %h3= "#{@job.klass}##{@job.perform_method}"
+    .lead= "#{@job.klass}##{@job.perform_method}"
 
     .job-state.inline-block
       .left state
