Do not round progress bar and add a title.

--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -20,4 +20,4 @@
                 = job_duration(job)
             - if job.running?
               .progress.pull-right
-                .progress-bar{ style: "width: #{job.percent_complete}%;"}
+                .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
