--- a/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
@@ -4,6 +4,9 @@
       width: 16em;
       height: 1em;
       margin: 5px 0px 0px 10px;
+      -webkit-border-radius: 0 !important;
+      -moz-border-radius: 0 !important;
+      border-radius: 0 !important;
     }
 
     .progress-bar {
