--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -47,7 +47,7 @@
       %label Created At:
       = @job.created_at.in_time_zone('EST')
 
-    - @job.status.each_pair do |key, value|
+    - @job.status.each do |key, value|
       .status-message
         %label= "#{key.to_s.titleize}:"
         - if key == :exception
