--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -1,23 +1,40 @@
 .col-md-4.job-list
+  .filter.pull-right
+    .btn-group
+      .btn.btn-default.dropdown-toggle{ data: {toggle: 'dropdown'} }
+        Filter
+        %span.caret
+      %ul.dropdown-menu
+        %li
+          = link_to "All", jobs_path
+        - %w( queued running failed completed ).each do |state|
+          %li
+            = link_to state.capitalize, jobs_path(states: [state])
+  .clearfix
   .list
-    - @jobs.each do |job|
-      = link_to job_path(id: job.id), class: 'card' do
-        .inner
-          .title
-            .lead{class: job_selected_class(job, @job)}
-              %i.fa{class: job_state_icon(job.state)}
+    - if @jobs.empty?
+      .card.inner
+        .title
+          .lead.text-center No Jobs Found.
+    - else
+      - @jobs.each do |job|
+        = link_to job_path(id: job.id), class: 'card' do
+          .inner
+            .title
+              .lead{class: job_selected_class(job, @job)}
+                %i.fa{class: job_state_icon(job.state)}
 
-              = job_title(job)
+                = job_title(job)
 
-          .description= job.description.try(:truncate, 50)
-          .info
-            .duration.pull-left
-              - if job.failed?
-                %i.fa.fa-bomb
-                failed
-              - else
-                %i.fa.fa-clock-o
-                = job_duration(job)
-            - if job.running?
-              .progress.pull-right
-                .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
+            .description= job.description.try(:truncate, 50)
+            .info
+              .duration.pull-left
+                - if job.failed?
+                  %i.fa.fa-bomb
+                  failed
+                - else
+                  %i.fa.fa-clock-o
+                  = job_duration(job)
+              - if job.running?
+                .progress.pull-right
+                  .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
