--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -1,8 +1,8 @@
 .col-md-4.job-list
   .filter.pull-right.btn-group.btn-group-justified{ style: 'padding: 1px 1px 1px 1px;', data: { toggle: 'buttons' } }
     - %w( queued running failed completed ).each do |state|
-      %label.btn.btn-default.state-toggle{ class: ('active' if @states.include?(state.to_s)) }
-        = check_box_tag(state, state, @states.include?(state.to_s))
+      %label.btn.btn-default.state-toggle{ class: ('active' if @states.include?(state.to_s) || @states.empty?) }
+        = check_box_tag(state, state, (@states.include?(state.to_s) || @states.empty?))
         %i.fa{class: job_state_icon(state.to_sym)}
         = state.capitalize
   .clearfix
