--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -1,8 +1,1 @@
-#queue
-  = render partial: 'list', locals: { jobs: @jobs }
-
-  .col-md-8.job-status
-    #job
-      .welcome_screen
-        %h1 Welcome to RocketJob!
-        %p High volume, priority based, Enterprise Batch Processing solution for Ruby
+= react_component('Queue', jobs: ActiveModel::ArraySerializer.new(@jobs, each_serializer: JobSerializer).to_json)
