--- a/app/views/rocket_job_mission_control/servers/index.html.haml
+++ b/app/views/rocket_job_mission_control/servers/index.html.haml
@@ -13,7 +13,7 @@
     .grid
       - @servers.each do |server|
         .card.col-xs-12.col-sm-6.col-md-3.col-lg-3
-          .inner
+          .inner.callout-top{ class: server_card_class(server) }
             .icon
               %i.fa.fa-database
 
