--- a/app/views/rocket_job_mission_control/jobs/running.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/running.html.haml
@@ -7,6 +7,7 @@
       .panel-heading
         %h4.panel-title
           %a.collapsed{href: "##{job.id}", data: {toggle: 'collapse', parent: '#accordion'} }
+            %i.fa.fa-plus-square-o{ style: 'font-size: 80%;'}
             = job_title(job)
       .panel-collapse.collapse{ id: job.id }
         .panel-body
