--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -1,10 +1,9 @@
 .col-md-4.job-list
-  .filter.pull-right.btn-group.btn-group-justified{ style: 'padding: 1px 1px 1px 1px;', data: { toggle: 'buttons' } }
+  .filter.btn-group.btn-group-justified{ style: 'padding: 1px 1px 1px 1px;', data: { toggle: 'buttons' } }
     - %w( queued running failed completed ).each do |state|
-      %label.btn.btn-default.state-toggle{ class: ('active' if @states.include?(state.to_s) || @states.empty?) }
+      %label.btn.btn-default.state-toggle{ class: ('active' if @states.include?(state.to_s) || @states.empty?), title: state.capitalize}
         = check_box_tag(state, state, (@states.include?(state.to_s) || @states.empty?))
         %i.fa{class: job_state_icon(state.to_sym)}
-        = state.capitalize
   .clearfix
   .list
     - if jobs.empty?
@@ -13,12 +12,11 @@
           .lead.text-center No Jobs Found.
     - else
       - jobs.each do |job|
-        = link_to job_path(id: job.id, states: @states), class: 'card' do
+        = link_to job_path(id: job.id, states: @states), class: job_card_class(job) do
           .inner
             .title
               .lead{class: job_selected_class(job, @job)}
-                %i.fa{class: job_state_icon(job.state)}
-
+                %i.fa{class: job_state_icon(job.state), style: 'font-size: 75%;', title: job.state}
                 = job_title(job)
 
             .description= job.description.try(:truncate, 50)
