--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -1,6 +1,9 @@
 .id
   %label ID:
   = job.id
+%div
+  %label Priority:
+  = job.priority
 .created_at
   %label Created At:
   = job.created_at.in_time_zone('EST')
