--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -6,7 +6,7 @@
   = job.priority
 .created_at
   %label Created At:
-  = job.created_at.in_time_zone('EST')
+  = job.created_at.in_time_zone('Eastern Time (US & Canada)')
 
 - job.status.each do |key, value|
   .status-message
