Switch to new rocketjob

--- a/app/views/rocket_job_mission_control/servers/index.html.haml
+++ b/app/views/rocket_job_mission_control/servers/index.html.haml
@@ -48,4 +48,4 @@
 
       .code-block.col-md-6.col-md-offset-3
         %pre
-          %code.language-bash bin/rake rocket_job:server
+          %code.language-bash bin/rocketjob
