Rename Server to Worker Improve #status

--- a/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
@@ -11,9 +11,9 @@
         %i.fa.fa-home
         Jobs
     %li
-      = link_to servers_path, class: active_page(servers_path) do
+      = link_to workers_path, class: active_page(workers_path) do
         %i.fa.fa-database
-        Servers
+        Workers
     %li
       = link_to running_jobs_path, class: active_page(running_jobs_path) do
         %i.fa.fa-circle-o-notch
