Use the new duration from RocketJob::Job for UI

--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -27,7 +27,7 @@
                   failed
                 - else
                   %i.fa.fa-clock-o
-                  = job_duration(job)
+                  = job.duration
               - if job.running?
                 .progress.pull-right
                   .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
