Beautification. Add rocketjob icon

--- a/app/views/rocket_job_mission_control/jobs/_status.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_status.html.haml
@@ -23,6 +23,7 @@
 
 - remaining = {}
 - status.each_pair do |key, value|
+  - next if value.blank?
   .status-message
   - if ['state', '_type'].include?(key)
   - elsif value.kind_of?(Hash) || value.kind_of?(Array)
