--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -4,5 +4,6 @@
   .col-md-8.job-status
     #job
       .welcome_screen
-        %h1 Welcome to RocketJob!
+        = link_to image_tag('rocket_job_mission_control/rocket-icon-512x512.png'), 'http://rocketjob.io'
+        %h1 Welcome to rocketjob
         %p High volume, priority based, Enterprise Batch Processing solution for Ruby
