--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -3,14 +3,16 @@
     %i.fa.fa-bars
     Menu
 
+
   = link_to main_app.root_path, class: 'btn btn-default btn-blank last' do
     %i.fa.fa-reply
     Back Home
+
 
   .clearfix
 
   .brand
     = link_to root_path, class: 'text-center' do
-      %i.fa.fa-rocket
+      = image_tag('rocket_job_mission_control/rocket-icon-64x64.png', size: '56x32')
       rocket
       .color job
