--- a/app/views/rocket_job_mission_control/jobs/_list.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_list.html.haml
@@ -1,9 +1,11 @@
 .col-md-4.job-list
   .filter.btn-group.btn-group-justified{ style: 'padding: 1px 1px 1px 1px;', data: { toggle: 'buttons' } }
-    - %w( queued running failed completed ).each do |state|
-      %label.btn.btn-default.state-toggle{ class: ('active' if @states.include?(state.to_s) || @states.empty?), title: state.capitalize}
-        = check_box_tag(state, state, (@states.include?(state.to_s) || @states.empty?))
-        %i.fa{class: job_state_icon(state.to_sym)}
+    - job_states.each do |state|
+      - enabled = @states.include?(state.to_s) || @states.empty?
+      - title   = enabled ? 'Hide' : 'Show'
+      %label.btn.btn-default.state-toggle{ class: ('active' if enabled), title: "#{title} #{state.capitalize}" }
+        = check_box_tag(state, state, enabled)
+        %i.fa{class: job_state_icon(state)}
   .clearfix
   .list
     - if jobs.empty?
@@ -12,22 +14,18 @@
           .lead.text-center No Jobs Found.
     - else
       - jobs.each do |job|
-        = link_to job_path(id: job.id, states: @states), class: job_card_class(job) do
+        = link_to job_path(id: job.id, states: @states), class: "card callout callout-#{job.state}" do
           .inner
             .title
               .lead{class: job_selected_class(job, @job)}
-                %i.fa{class: job_state_icon(job.state), style: 'font-size: 75%;', title: job.state}
+                %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
                 = job_title(job)
 
             .description= job.description.try(:truncate, 50)
             .info
               .duration.pull-left
-                - if job.failed?
-                  %i.fa.fa-bomb
-                  failed
-                - else
-                  %i.fa.fa-clock-o
-                  = job.duration
+                %i.fa.fa-clock-o
+                = job.duration
               - if job.running?
                 .progress.pull-right
                   .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
