dirmon ui first commit

--- a/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
@@ -18,3 +18,7 @@
       = link_to running_jobs_path, class: active_page(running_jobs_path) do
         %i.fa.fa-circle-o-notch
         Running
+    %li
+      = link_to dirmon_entries_path, class: active_page(dirmon_entries_path) do
+        %i.fa.fa-folder-o
+        Dirmon
