Do not display encrypted slice info.

--- a/app/views/rocket_job_mission_control/jobs/running.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/running.html.haml
@@ -34,4 +34,4 @@
                 %td= slice.worker_name
                 %td
                   %pre
-                    %code= pretty_print_array_or_hash(slice.to_a)
+                    %code= display_slice_info(slice, job.encrypt?)
