--- a/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_list.html.haml
@@ -5,7 +5,6 @@
       %label.btn.btn-default.state-toggle{ class: ('active' if @states.include?(state.to_s)), title: state.capitalize}
         = check_box_tag(state, (state.to_s))
         %i.fa{class: job_state_icon(state.to_sym)}
-
   .clearfix
   .list
     - if @dirmons.empty?
@@ -14,11 +13,10 @@
           .lead.text-center No Dirmon Entries Found.
     - else
       - @dirmons.each do |job|
-        = link_to dirmon_entry_path(id: job.id) do
-          .card.inner{style: 'height: 5.5em;'}
-            .inner
-              .title
-                .lead{class: job_selected_class(job, @job)}
-                  %i.fa{class: job_state_icon_dir(job.enabled), style: 'font-size: 75%;', title: job.enabled}
-                  = job.name
-              .description= job.path.try(:truncate, 40)
+        = link_to dirmon_entry_path(id: job.id, states: @states), class: "card callout callout-#{job.enabled} #{job_selected_class(job, @job)}" do
+          .inner
+            .title
+              .lead
+                %i.fa{class: job_state_icon_dir(job.enabled), style: 'font-size: 75%;', title: job.enabled}
+                = job.name
+            .description= job.path.try(:truncate, 40)
